--- a/variants.Rmd
+++ b/variants.Rmd
@@ -1,9 +1,9 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{Using Bioconductor to Annotate Genetic Variants}
+%\VignetteIndexEntry{Annotating Variants}
 -->
 
-# ![](/images/icons/help.gif)Using Bioconductor to Annotate Genetic Variants 
+# ![](/images/icons/help.gif)Annotating Variants 
 
 The VariantAnnotation package has facilities for reading in all or portions 
 of Variant Call Format (VCF) files. Structural location information can be 
@@ -18,9 +18,9 @@ PolyPhen database packages.
 * [Resources](#resources)
 
 <h2 id="sample-workflow">Sample Workflow</h2>
-
-Performed with Bioconductor 2.11 and R >= 2.15; 
-VariantAnnotation 1.3.9 in the devel branch.
+ 
+Performed with Bioconductor 3.0 and R >= 3.1;
+VariantAnnotation 1.11.35.
 
 This workflow annotates variants found in the Transient Receptor Potential 
 Vanilloid (TRPV) gene family on chromosome 17. The VCF file is available in 
@@ -59,38 +59,43 @@ the VCF file.
 library(org.Hs.eg.db)
 genesym <- c("TRPV1", "TRPV2", "TRPV3")
 geneid <- select(org.Hs.eg.db, keys=genesym, keytype="SYMBOL",
-                 cols="ENTREZID")
+                 columns="ENTREZID")
 geneid
 ```
      
-Load the annotation package and create a list of transcripts
-by gene.
+Load the annotation package and keep only the standard chromosomes.
 
 ```{r}
 library(TxDb.Hsapiens.UCSC.hg19.knownGene)
 txdb <- TxDb.Hsapiens.UCSC.hg19.knownGene
-txbygene = transcriptsBy(txdb, "gene")
+keepStandardChromosomes(txdb)
 ```
-     
-Subset the annotations on chromosome 17 and adjust the seqlevels 
-to match those in the VCF file.
+
+Modify the seqlevels (chromosomes) in the txdb to match
+those in the VCF file. This step is necessary because we want
+to use ranges from the txdb to extract a subset from the VCF.
 
 ```{r}
-tx_chr17 <- keepSeqlevels(txbygene, "chr17")
-tx_17 <- renameSeqlevels(tx_chr17, c(chr17="17"))
-
-## Create the gene ranges for the TRPV genes
-rngs <- lapply(geneid$ENTREZID, 
-               function(id) 
-                   range(tx_17[names(tx_17) %in% id]))
-gnrng <- unlist(do.call(c, rngs), use.names=FALSE)
-names(gnrng) <- geneid$SYMBOL 
+renameSeqlevels(txdb, gsub("chr", "", seqlevels(txdb)))
 ```
-     
-To retrieve a subset of data from a VCF file, create a ScanVcfParam
-object. This object can specify genomic coordinates (ranges) or 
-individual VCF elements to be extracted. When ranges are extracted, 
-a tabix index file must exist for the VCF. See ?indexTabix for details.
+
+Create a list of transcripts by gene:
+
+```{r}
+txbygene = transcriptsBy(txdb, "gene")
+```
+
+Create the gene ranges for the TRPV genes
+
+```{r}
+gnrng <- unlist(range(txbygene[geneid$ENTREZID]), use.names=FALSE)
+names(gnrng) <- geneid$SYMBOL
+```
+
+A ScanVcfParam object is used to retrieve data subsets. This object
+can specify genomic coordinates (ranges) or individual VCF elements.
+Extractions of ranges (vs fields) requires a tabix index.
+See ?indexTabix for details.
 
 ```{r}
 param <- ScanVcfParam(which = gnrng, info = "DP", geno = c("GT", "cPd"))
@@ -106,29 +111,17 @@ head(fixed(vcf))
 geno(vcf)
 ```
 
-To find the structural location of the variants, use the locateVariants 
-function with the TxDb.Hsapiens.UCSC.hg19.knownGene package that was
-loaded eariler. The variants in the VCF object have chromosome name "17" 
-while the annotation has "chr17". Adjust the seqlevels (chromosome names) of 
-the VCF object to match that of the annotation.
+To find the structural location of the variants, we'll use the 
+locateVariants function with the TxDb.Hsapiens.UCSC.hg19.knownGene 
+package loaded eariler.
 
-
-```{r}
-seqlevels(vcf)
-head(seqlevels(txdb))
-## seqlevels do not match
-intersect(seqlevels(vcf), seqlevels(txdb))
-vcf_mod <- renameSeqlevels(vcf, c("17"="chr17"))
-## seqlevels now match
-intersect(seqlevels(vcf_mod), seqlevels(txdb))
- 
 ## Use the 'region' argument to define the region
 ## of interest. See ?locateVariants for details.
-cds <- locateVariants(vcf_mod, txdb, CodingVariants())
-five <- locateVariants(vcf_mod, txdb, FiveUTRVariants())
-splice <- locateVariants(vcf_mod, txdb, SpliceSiteVariants())
-intron <- locateVariants(vcf_mod, txdb, IntronVariants())
-all <- locateVariants(vcf_mod, txdb, AllVariants())
+cds <- locateVariants(vcf, txdb, CodingVariants())
+five <- locateVariants(vcf, txdb, FiveUTRVariants())
+splice <- locateVariants(vcf, txdb, SpliceSiteVariants())
+intron <- locateVariants(vcf, txdb, IntronVariants())
+all <- locateVariants(vcf, txdb, AllVariants())
 ```
      
 Each row in cds represents a variant-transcript match so multiple rows
@@ -136,17 +129,16 @@ per variant are possible. If we are interested in gene-centric questions
 the data can be summarized by gene regardless of transcript.
 
 ```{r}     
-## Did any variants match more than one gene
+## Did any variants match more than one gene?
 table(sapply(split(values(all)[["GENEID"]], values(all)[["QUERYID"]]), 
-        function(x)
-            length(unique(x)) > 1))
+      function(x) length(unique(x)) > 1))
  
-## Summarize the number of variants by gene
-idx <- sapply(split(values(all)[["QUERYID"]], values(all)[["GENEID"]]), 
-         unique)
+## Summarize the number of variants by gene:
+idx <- sapply(split(values(all)[["QUERYID"]], 
+              values(all)[["GENEID"]]), unique)
 sapply(idx, length)
  
-## Summarize variant location by gene
+## Summarize variant location by gene:
 sapply(names(idx), 
     function(nm) {
         d <- all[values(all)[["GENEID"]] %in% nm, c("QUERYID", "LOCATION")]
@@ -161,7 +153,9 @@ alleles are provided by the user.
 
 ```{r}
 library(BSgenome.Hsapiens.UCSC.hg19)
-aa <- predictCoding(vcf_mod, txdb, Hsapiens)
+seqlevelsStyle(vcf) <- "UCSC"
+seqlevelsStyle(txdb) <- "UCSC"
+aa <- predictCoding(vcf, txdb, Hsapiens)
 ```
      
 predictCoding returns results for coding variants only. As with 
@@ -169,17 +163,17 @@ locateVariants, the output has one row per variant-transcript match
 so multiple rows per variant are possible.
 
 ```{r}     
-## Did any variants match more than one gene
+## Did any variants match more than one gene?
 table(sapply(split(values(aa)[["GENEID"]], values(aa)[["QUERYID"]]), 
         function(x)
             length(unique(x)) > 1))
 
-## Summarize the number of variants by gene
+## Summarize the number of variants by gene:
 idx <- sapply(split(values(aa)[["QUERYID"]], values(aa)[["GENEID"]], 
               drop=TRUE), unique)
 sapply(idx, length)
 
-## Summarize variant consequence by gene
+## Summarize variant consequence by gene:
 sapply(names(idx), 
        function(nm) {
            d <- aa[values(aa)[["GENEID"]] %in% nm, c("QUERYID","CONSEQUENCE")]
@@ -206,9 +200,9 @@ from UCSC Known Gene so we will use PolyPhen for predictions.
 ## Load the PolyPhen package and explore the available keys and columns
 library(PolyPhen.Hsapiens.dbSNP131)
 keys <- keys(PolyPhen.Hsapiens.dbSNP131)
-cols <- cols(PolyPhen.Hsapiens.dbSNP131)
+cols <- columns(PolyPhen.Hsapiens.dbSNP131)
 ## column descriptions are found at ?PolyPhenDbColumns
-cols(PolyPhen.Hsapiens.dbSNP131)
+cols
 
 ## Get the rsids for the non-synonymous variants from the
 ## predictCoding results
@@ -217,7 +211,7 @@ rsid <- unique(names(aa)[values(aa)[["CONSEQUENCE"]] == "nonsynonymous"])
 ## Retrieve predictions for non-synonymous variants. Two of the six variants 
 ## are found in the PolyPhen database. 
 select(PolyPhen.Hsapiens.dbSNP131, keys=rsid, 
-       cols=c("AA1", "AA2", "PREDICTION"))
+       columns=c("AA1", "AA2", "PREDICTION"))
 ```
 
 <p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
