tidy txdb display
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/workflows/variants@94455 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/variants.Rmd
+++ b/variants.Rmd
@@ -72,9 +72,9 @@ Modify the seqlevels (chromosomes) in the txdb to match
 those in the VCF file. This step is necessary because we want
 to use ranges from the txdb to extract a subset from the VCF.
 
-```{r, echo=FALSE}
-renameSeqlevels(txdb, gsub("chr", "", seqlevels(txdb)))
-keepSeqlevels(txdb, "17")
+```{r}
+txdb <- renameSeqlevels(txdb, gsub("chr", "", seqlevels(txdb)))
+txdb <- keepSeqlevels(txdb, "17")
 ```
 
 Create a list of transcripts by gene:
