edit line that formats icon
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/workflows/variants@103219 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/variants.Rmd
+++ b/variants.Rmd
@@ -3,7 +3,7 @@
 %\VignetteIndexEntry{Annotating Variants}
 -->
 
-# ![](/images/icons/help.gif)Annotating Variants 
+![](/images/icons/help.gif)Annotating Variants 
 
 The VariantAnnotation package has facilities for reading in all or portions 
 of Variant Call Format (VCF) files. Structural location information can be 
