enhance the background, TOC and section details
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/workflows/variants@104701 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/Annotating_Genomic_Variants.Rmd
+++ b/Annotating_Genomic_Variants.Rmd
@@ -1,55 +1,120 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{Annotating Variants}
+%\VignetteIndexEntry{Annotating Genomic Variants}
 -->
 
-![](/images/icons/help.gif)Annotating Variants 
+---
+Author: Valerie Obenchain
+---
 
-The VariantAnnotation package has facilities for reading in all or portions 
-of Variant Call Format (VCF) files. Structural location information can be 
-determined as well as amino acid coding changes for non-synonymous variants. 
-Consequences of the coding changes can be investigated with the SIFT and 
-PolyPhen database packages.
+<h1> Annotating Genomic Variants </h1>
 
+* [Background](#background) 
+* [Set Up](#setup) 
+* [TRPV Variants](#TRPV) 
+    * [Explore the VCF file header data](#TRPV_header)
+    * [Convert gene symbols to gene ids](#TRPV_symbols)
+    * [Create gene ranges](#TRPV_ranges)
+    * [Extract variant subsets](#TRPV_subset)
+    * [Variant location in the gene model](#TRPV_locate)
+    * [Amino acid coding changes in non-synonymous variants](#TRPV_predict)
+    * [Predict the severity of the coding changes to protein structure and function](#TRPV_damage)
+* [Annotating with the ensemblVEP package](#vep)
+* [Exploring Package Content](#content)
+* [sessionInfo()](#session)
 
-* [Sample Workflow](#sample-workflow) 
-* [Installation and Use](#install-and-use)
-* [Exploring Package Content](#exploring-package-content)
-* [Resources](#resources)
+<h2 id="background">Background</h2>
 
-<h2 id="sample-workflow">Sample Workflow</h2>
- 
-This workflow annotates variants found in the Transient Receptor Potential 
-Vanilloid (TRPV) gene family on chromosome 17. The VCF file is available in 
-the cgdv17 data package and contains Complete Genomics data for population 
-type CEU.
+The VariantAnnotation package has facilities for reading in all or subsets
+of Variant Call Format (VCF) files. These text files contain meta-information
+lines, a header line and data lines each containing information about a 
+position in the genome. The format also may also contain genotype information 
+on samples for each position. More on the VCF format can be found in the
+specs (http://samtools.github.io/hts-specs/VCFv4.2.pdf).
 
-```{r echo=FALSE}
+The 'locateVariants' function in the VariantAnnotation package identifies
+where a variant is located with respect to the gene model (e.g., exon, intron, 
+splice site, etc.). The 'predictCoding' function reports the amino acid
+change for non-synonymous coding variants. Consequences of the coding changes 
+can be investigated with the SIFT and PolyPhen database packages. We'll use
+these functions to learn about variants located on the TRPV gene on
+chromosome
+
+<h2 id="setup">Set Up</h2>
+
+This workflow requires several different Bioconductor packages. Usage of each
+will be described in detail in the following sections.
+
+```{r, echo=FALSE}
 suppressPackageStartupMessages(library(VariantAnnotation))
-suppressPackageStartupMessages(library(cgdv17))
+suppressMessages(suppressPackageStartupMessages(library(cgdv17)))
 suppressPackageStartupMessages(library(org.Hs.eg.db))
 suppressPackageStartupMessages(library(TxDb.Hsapiens.UCSC.hg19.knownGene))
 suppressPackageStartupMessages(library(BSgenome.Hsapiens.UCSC.hg19))
 suppressPackageStartupMessages(library(PolyPhen.Hsapiens.dbSNP131))
 ```
 
+```{r, eval=FALSE}
+library(VariantAnnotation)
+library(cgdv17)
+library(org.Hs.eg.db)
+library(TxDb.Hsapiens.UCSC.hg19.knownGene)
+library(BSgenome.Hsapiens.UCSC.hg19)
+library(PolyPhen.Hsapiens.dbSNP131)
+```
+
+Use biocLite() to get the packages you don't have installed:
+
+```{r, eval=FALSE} 
+source("http://bioconductor.org/biocLite.R")
+biocLite("mypackage")
+```
+
+<h2 id="TRPV">TRPV Variants</h2>
+ 
+<h3 id="TRPV_explore">Explore the VCF file header data</h3>
+
+This workflow focuses on variants located in the Transient Receptor 
+Potential Vanilloid (TRPV) gene family on chromosome 17. Sample data are 
+from the Bioconductor cgdv17 experimental data package which contains
+Complete Genomics Diversity panel data for chromosome 17 on 46 individuals.
+For more background on how these data were curated see the package vignette.
+
+```{r, eval=FALSE}
+browseVignettes("cgdv17")
+```
+
+We use a VCF file from the package that is a subset of chromosome 17 for a 
+single individual from the CEU population.
+
 ```{r}
 library(VariantAnnotation)
 library(cgdv17)
 file <- system.file("vcf", "NA06985_17.vcf.gz", package = "cgdv17")
- 
-## Explore the file header with scanVcfHeader
+``` 
+
+Extract file header information with scanVcfHeader() and explore with the 
+info() and geno() accessors.
+
+```{r}
 hdr <- scanVcfHeader(file)
  
 info(hdr) 
  
 geno(hdr) 
 ```
-     
-Convert the gene symbols to gene ids compatible with the 
-TxDb.Hsapiens.UCSC.hg19.knownGene annotations. The annotaions 
-are used to define the TRPV ranges that will be extracted from
-the VCF file.
+
+Variants in the VCF have been aligned to NCBI genome build GRCh37:
+
+```{r}
+meta(hdr)$META
+```
+
+<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
+
+<h3 id="TRPV_symbols">Convert gene symbols to gene ids</h3>
+
+Use the org.Hs.eg.db package to convert gene symbols to gene ids.
 
 ```{r}
 ## get entrez ids from gene symbols
@@ -59,7 +124,14 @@ geneid <- select(org.Hs.eg.db, keys=genesym, keytype="SYMBOL",
                  columns="ENTREZID")
 geneid
 ```
-     
+<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
+
+<h3 id="TRPV_ranges">Create gene ranges</h3>
+
+We use the hg19 known gene track from UCSC to identify the TRPV gene ranges.
+These ranges will eventually be used to extract variants from a regions in
+the VCF file.
+
 Load the annotation package.
 
 ```{r}
@@ -68,9 +140,11 @@ txdb <- TxDb.Hsapiens.UCSC.hg19.knownGene
 txdb
 ```
 
-Modify the seqlevels (chromosomes) in the txdb to match
-those in the VCF file. This step is necessary because we want
-to use ranges from the txdb to extract a subset from the VCF.
+Our VCF file was aligned to a genome from NCBI and the known gene track was
+from UCSC. These institutions have different naming conventions for the
+chromosomes. In order to use these two pieces of data in a matching
+or overlap operation the chromosome names (also called sesqlevels) need to
+match. We will modify the txdb to match the VCF file.
 
 ```{r}
 txdb <- renameSeqlevels(txdb, gsub("chr", "", seqlevels(txdb)))
@@ -89,6 +163,10 @@ Create the gene ranges for the TRPV genes
 gnrng <- unlist(range(txbygene[geneid$ENTREZID]), use.names=FALSE)
 names(gnrng) <- geneid$SYMBOL
 ```
+
+<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
+
+<h3 id="TRPV_subset">Extract variant subsets</h3>
 
 A ScanVcfParam object is used to retrieve data subsets. This object
 can specify genomic coordinates (ranges) or individual VCF elements.
@@ -109,11 +187,15 @@ head(fixed(vcf))
 geno(vcf)
 ```
 
-To find the structural location of the variants, we'll use the 
-locateVariants function with the TxDb.Hsapiens.UCSC.hg19.knownGene 
-package loaded eariler.
+<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
 
-```{r, eval=FALSE}     
+<h3 id="TRPV_locate">Variant location in the gene model</h3>
+
+The locateVariants function identifies where a variant falls with respect to
+gene structure, e.g., exon, utr, splice site, etc. We use the gene model
+from the TxDb.Hsapiens.UCSC.hg19.knownGene package loaded eariler.
+
+```{r, eval=FALSE} 
 ## Use the 'region' argument to define the region
 ## of interest. See ?locateVariants for details.
 cds <- locateVariants(vcf, txdb, CodingVariants())
@@ -125,12 +207,12 @@ intron <- locateVariants(vcf, txdb, IntronVariants())
 ```{r}
 all <- locateVariants(vcf, txdb, AllVariants())
 ```
-     
+ 
 Each row in cds represents a variant-transcript match so multiple rows
 per variant are possible. If we are interested in gene-centric questions
 the data can be summarized by gene regardless of transcript.
 
-```{r}     
+```{r} 
 ## Did any variants match more than one gene?
 table(sapply(split(mcols(all)$GENEID, mcols(all)$QUERYID), 
       function(x) length(unique(x)) > 1))
@@ -146,7 +228,11 @@ sapply(names(idx),
         table(mcols(d)$LOCATION[duplicated(d) == FALSE])
     })
 ```
-     
+ 
+<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
+
+<h3 id="TRPV_predict">Amino acid coding changes in non-synonymous variants</h3>
+
 Amino acid coding for non-synonymous variants can be computed
 with the function predictCoding. The BSgenome.Hsapiens.UCSC.hg19 
 package is used as the source of the reference alleles. Variant 
@@ -158,12 +244,12 @@ seqlevelsStyle(vcf) <- "UCSC"
 seqlevelsStyle(txdb) <- "UCSC"
 aa <- predictCoding(vcf, txdb, Hsapiens)
 ```
-     
+ 
 predictCoding returns results for coding variants only. As with 
 locateVariants, the output has one row per variant-transcript match
 so multiple rows per variant are possible.
 
-```{r}     
+```{r} 
 ## Did any variants match more than one gene?
 table(sapply(split(mcols(aa)$GENEID, mcols(aa)$QUERYID), 
         function(x) length(unique(x)) > 1))
@@ -179,23 +265,28 @@ sapply(names(idx),
            table(mcols(d)$CONSEQUENCE[duplicated(d) == FALSE])
        })
 ```
-    
+ 
 The variants 'not translated' are explained by the warnings thrown when
 predictCoding was called. Variants that have a missing varAllele or have an
 'N' in the varAllele are not translated. If the varAllele substitution had
 resulted in a frameshift the consequence would be 'frameshift'. See
 ?predictCoding for details.
-    
+ 
+<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
+
+<h3 id="TRPV_damage">Predict the severity of the coding changes to protein
+                     structure and function</h3>
+
 The SIFT.Hsapiens.dbSNP132 and PolyPhen.Hsapiens.dbSNP131 packages 
 provide predictions of how damaging amino acid coding changes may
 be to protein structure and function. Both packages search on rsid.
-    
+ 
 The pre-computed predictions in the SIFT and PolyPhen packages are based 
 on specific gene models. SIFT is based on Ensembl and PolyPhen on UCSC 
 Known Gene. The TranscriptDb we used to identify coding variants was 
 from UCSC Known Gene so we will use PolyPhen for predictions.
 
-```{r}    
+```{r} 
 ## Load the PolyPhen package and explore the available keys and columns
 library(PolyPhen.Hsapiens.dbSNP131)
 keys <- keys(PolyPhen.Hsapiens.dbSNP131)
@@ -215,35 +306,38 @@ select(PolyPhen.Hsapiens.dbSNP131, keys=rsid,
 
 <p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
 
+<h2 id="vep">Annotating with the ensemblVEP pakage</h2>
 
-<h2 id="install-and-use">Installation and Use</h2>
+The ensemblVEP package provides access to the online Ensembl Variant
+Effect Predictor (VEP tool).  The VEP tool ouputs predictions
+of functional consequences of known and unknown variants as reported 
+by Sequence Ontology or Ensembl. Regulatory region consequences, HGNC, 
+Ensembl protein identifiers, HGVS, co-located variants are optional outputs.
+ensemblVEP() accepts the name of a VCF file and returns a VCF on disk or
+GRanges in the R workspace.
 
-Follow [installation instructions](/install/) to start using these
-packages.  To install VariantAnnotation use 
-
-```{r eval=FALSE}
-library(BiocInstaller) 
-biocLite("VariantAnnotation")
+```{r, echo=FALSE}
+suppressPackageStartupMessages(library(ensemblVEP))
 ```
 
-Package installation is required only once per R installation. View a
-full list of available
-[software](/packages/release/bioc/)
-and 
-[annotation](/packages/release/data/annotation/)
-packages.
+```{r}
+library(ensemblVEP)
+fl <- system.file("extdata", "ex2.vcf", 
+                  package="VariantAnnotation")
+```
+```{r, echo=FALSE}
+gr <- ensemblVEP(fl)
+```
+```{r}
+gr <- ensemblVEP(fl)
+```
 
-To use the `VariantAnnotation`, evaluate the commands
-
-```{r eval=FALSE}
-library(VariantAnnotation)
-````    
-
-These commands are required once in each R session.
-
+```{r}
+head(gr, 3)
+```
 <p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
 
-<h2 id="exploring-package-content">Exploring Package Content</h2>
+<h2 id="content">Exploring Package Content</h2>
 
 Packages have extensive help pages, and include vignettes highlighting
 common use cases. The help pages and vignettes are available from
@@ -266,8 +360,9 @@ package functionality use
 help.start()
 ```
 
-
 <p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
+
+<h2 id="session">sessionInfo()</h2>
 
 ```{r}
 sessionInfo()
