--- a/Annotating_Genomic_Variants.Rmd
+++ b/Annotating_Genomic_Variants.Rmd
@@ -12,13 +12,12 @@ Author: Valerie Obenchain
 * [Background](#background) 
 * [Set Up](#setup) 
 * [TRPV Variants](#TRPV) 
-    * [Explore the VCF file header data](#TRPV_header)
+    * [Explore the VCF header data](#TRPV_header)
     * [Convert gene symbols to gene ids](#TRPV_symbols)
     * [Create gene ranges](#TRPV_ranges)
     * [Extract variant subsets](#TRPV_subset)
     * [Variant location in the gene model](#TRPV_locate)
     * [Amino acid coding changes in non-synonymous variants](#TRPV_predict)
-    * [Predict the severity of the coding changes to protein structure and function](#TRPV_damage)
 * [Annotating with the ensemblVEP package](#vep)
 * [Exploring Package Content](#content)
 * [sessionInfo()](#session)
@@ -71,8 +70,6 @@ biocLite("mypackage")
 ```
 
 <h2 id="TRPV">TRPV Variants</h2>
- 
-<h3 id="TRPV_explore">Explore the VCF file header data</h3>
 
 This workflow focuses on variants located in the Transient Receptor 
 Potential Vanilloid (TRPV) gene family on chromosome 17. Sample data are 
@@ -93,8 +90,11 @@ library(cgdv17)
 file <- system.file("vcf", "NA06985_17.vcf.gz", package = "cgdv17")
 ``` 
 
-Extract file header information with scanVcfHeader() and explore with the 
-info() and geno() accessors.
+<h3 id="TRPV_header">Explore the VCF header data</h3>
+
+To get an idea of what data are in the file we look at the header.
+scanVcfHeader() parses the file header into a VCFHeader object and the
+info() and geno() accessors extract field-specific data.
 
 ```{r}
 hdr <- scanVcfHeader(file)
@@ -274,39 +274,8 @@ resulted in a frameshift the consequence would be 'frameshift'. See
  
 <p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
 
-<h3 id="TRPV_damage">Predict the severity of the coding changes to protein
-                     structure and function</h3>
 
-The SIFT.Hsapiens.dbSNP132 and PolyPhen.Hsapiens.dbSNP131 packages 
-provide predictions of how damaging amino acid coding changes may
-be to protein structure and function. Both packages search on rsid.
- 
-The pre-computed predictions in the SIFT and PolyPhen packages are based 
-on specific gene models. SIFT is based on Ensembl and PolyPhen on UCSC 
-Known Gene. The TranscriptDb we used to identify coding variants was 
-from UCSC Known Gene so we will use PolyPhen for predictions.
-
-```{r} 
-## Load the PolyPhen package and explore the available keys and columns
-library(PolyPhen.Hsapiens.dbSNP131)
-keys <- keys(PolyPhen.Hsapiens.dbSNP131)
-cols <- columns(PolyPhen.Hsapiens.dbSNP131)
-## column descriptions are found at ?PolyPhenDbColumns
-cols
-
-## Get the rsids for the non-synonymous variants from the
-## predictCoding results
-rsid <- unique(names(aa)[mcols(aa)$CONSEQUENCE == "nonsynonymous"]) 
-
-## Retrieve predictions for non-synonymous variants. Two of the six variants 
-## are found in the PolyPhen database. 
-select(PolyPhen.Hsapiens.dbSNP131, keys=rsid, 
-       columns=c("AA1", "AA2", "PREDICTION"))
-```
-
-<p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
-
-<h2 id="vep">Annotating with the ensemblVEP pakage</h2>
+<h2 id="vep">Annotating with the ensemblVEP package</h2>
 
 The ensemblVEP package provides access to the online Ensembl Variant
 Effect Predictor (VEP tool).  The VEP tool ouputs predictions
@@ -320,21 +289,105 @@ GRanges in the R workspace.
 suppressPackageStartupMessages(library(ensemblVEP))
 ```
 
-```{r}
-library(ensemblVEP)
-fl <- system.file("extdata", "ex2.vcf", 
-                  package="VariantAnnotation")
-```
-```{r, echo=FALSE}
-gr <- ensemblVEP(fl)
-```
-```{r}
-gr <- ensemblVEP(fl)
-```
+Load ensemblVEP:
 
 ```{r}
+library(ensemblVEP)
+```
+
+The 'file' argument to ensemblVEP must be a vcf file on disk. We'll write out
+the VCF object with the TRPV variants and submit that to ensemblVEP.
+
+Write the VCF object to a vcf file in tempfile():
+
+```{r}
+dest <- tempfile()
+writeVcf(vcf, dest)
+```
+
+Call ensemblVEP with the file containing only the TRPV variants and the custom 
+VEPParam object:
+
+```{r, eval=FALSE}
+gr <- ensemblVEP(file = dest)
+```
+
+```{r, eval=FALSE}
+2015-06-09 08:50:22 - Starting...
+2015-06-09 08:50:24 - Detected format of input file as vcf
+2015-06-09 08:50:24 - Read 277 variants into buffer
+2015-06-09 08:50:24 - Reading transcript data from cache and/or database
+[================================================================================================================================================================]  [ 100% ]
+2015-06-09 08:54:29 - Retrieved 55 transcripts (0 mem, 0 cached, 55 DB, 0 duplicates)
+2015-06-09 08:54:29 - Analyzing chromosome 17
+2015-06-09 08:54:29 - Analyzing variants
+[================================================================================================================================================================]  [ 100% ]
+2015-06-09 08:54:29 - Calculating consequences
+[================================================================================================================================================================]  [ 100% ]
+2015-06-09 08:54:30 - Processed 277 total variants (1 vars/sec, 1 vars/sec total)
+2015-06-09 08:54:30 - Wrote stats summary to /tmp/RtmppUYah1/file339f64bf5700_summary.html
+2015-06-09 08:54:30 - Finished!
+```
+
+```{r, eval=FALSE}
 head(gr, 3)
 ```
+
+```{r, eval=FALSE}
+GRanges object with 3 ranges and 22 metadata columns:
+           seqnames             ranges strand |   Allele
+              <Rle>          <IRanges>  <Rle> | <factor>
+  rs402369    chr17 [3469401, 3469401]      * |        G
+  rs402369    chr17 [3469401, 3469401]      * |        G
+  rs402369    chr17 [3469401, 3469401]      * |        G
+                                    Consequence   IMPACT   SYMBOL
+                                       <factor> <factor> <factor>
+  rs402369 splice_region_variant&intron_variant      LOW  SPATA22
+  rs402369 splice_region_variant&intron_variant      LOW  SPATA22
+  rs402369                upstream_gene_variant MODIFIER     ASPA
+                      Gene Feature_type         Feature        BIOTYPE     EXON
+                  <factor>     <factor>        <factor>       <factor> <factor>
+  rs402369 ENSG00000141255   Transcript ENST00000397168 protein_coding     <NA>
+  rs402369 ENSG00000141255   Transcript ENST00000355380 protein_coding     <NA>
+  rs402369 ENSG00000108381   Transcript ENST00000456349 protein_coding     <NA>
+             INTRON    HGVSc    HGVSp cDNA_position CDS_position
+           <factor> <factor> <factor>      <factor>     <factor>
+  rs402369      1/8     <NA>     <NA>          <NA>         <NA>
+  rs402369      1/7     <NA>     <NA>          <NA>         <NA>
+  rs402369     <NA>     <NA>     <NA>          <NA>         <NA>
+           Protein_position Amino_acids   Codons Existing_variation DISTANCE
+                   <factor>    <factor> <factor>           <factor> <factor>
+  rs402369             <NA>        <NA>     <NA>               <NA>     <NA>
+  rs402369             <NA>        <NA>     <NA>               <NA>     <NA>
+  rs402369             <NA>        <NA>     <NA>               <NA>     4652
+             STRAND SYMBOL_SOURCE    HGNC_ID
+           <factor>      <factor>   <factor>
+  rs402369       -1          HGNC HGNC:30705
+  rs402369       -1          HGNC HGNC:30705
+  rs402369        1          HGNC   HGNC:756
+  -------
+  seqinfo: 25 sequences from  genome; no seqlengths
+```
+
+Data from the VEP tool is returned as metadata columns in the
+GRanges ('gr' object). You can further control what fields are returned
+by setting the runtime options in the VEPParam.
+
+```{r}
+VEPParam()
+```
+
+Each of the options, e.g., 'basic', 'inut', 'cache' etc. has multiple
+fields that can be set.
+
+```{r}
+basic(VEPParam())
+```
+
+For more details on runtime options see the ?VEPParam man page and the
+Ensembl VEP web site
+(http://uswest.ensembl.org/info/docs/tools/vep/script/vep_options.html).
+
 <p class="back_to_top">[ <a href="#top">Back to top</a> ]</p>
 
 <h2 id="content">Exploring Package Content</h2>
