All workflows must now have a YAML metadata preamble which includes a vignette tag specifying the vignette engine.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/workflows/variants@108006 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/Annotating_Genomic_Variants.Rmd
+++ b/Annotating_Genomic_Variants.Rmd
@@ -1,10 +1,8 @@
-<!--
-%\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{Annotating Genomic Variants}
--->
-
 ---
 Author: Valerie Obenchain
+vignette: >
+  %\VignetteIndexEntry{Annotating Genomic Variants}
+  %\VignetteEngine{knitr::rmarkdown}
 ---
 
 <h1> Annotating Genomic Variants </h1>
