source biocLite.R from https url (with comment to use http if https not working)
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/workflows/variants@110069 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/Annotating_Genomic_Variants.Rmd
+++ b/Annotating_Genomic_Variants.Rmd
@@ -63,7 +63,8 @@ library(PolyPhen.Hsapiens.dbSNP131)
 Use biocLite() to get the packages you don't have installed:
 
 ```{r, eval=FALSE} 
-source("http://bioconductor.org/biocLite.R")
+## try http:// if https:// URLs are not supported
+source("https://bioconductor.org/biocLite.R")
 biocLite("mypackage")
 ```
 
