--- a/vignettes/Annotating_Genomic_Variants.Rmd
+++ b/vignettes/Annotating_Genomic_Variants.Rmd
@@ -29,12 +29,7 @@ This workflow requires several different Bioconductor packages. Usage of each
 will be described in detail in the following sections.
 
 ```{r, echo=FALSE}
-suppressPackageStartupMessages(library(VariantAnnotation))
-suppressMessages(suppressPackageStartupMessages(library(cgdv17)))
-suppressPackageStartupMessages(library(org.Hs.eg.db))
-suppressPackageStartupMessages(library(TxDb.Hsapiens.UCSC.hg19.knownGene))
-suppressPackageStartupMessages(library(BSgenome.Hsapiens.UCSC.hg19))
-suppressPackageStartupMessages(library(PolyPhen.Hsapiens.dbSNP131))
+library('variants')
 ```
 
 ```{r, eval=FALSE}
@@ -70,8 +65,6 @@ We use a VCF file from the package that is a subset of chromosome 17 for a
 single individual from the CEU population.
 
 ```{r}
-library(VariantAnnotation)
-library(cgdv17)
 file <- system.file("vcf", "NA06985_17.vcf.gz", package = "cgdv17")
 ``` 
 
@@ -103,7 +96,6 @@ Use the org.Hs.eg.db package to convert gene symbols to gene ids.
 
 ```{r}
 ## get entrez ids from gene symbols
-library(org.Hs.eg.db)
 genesym <- c("TRPV1", "TRPV2", "TRPV3")
 geneid <- select(org.Hs.eg.db, keys=genesym, keytype="SYMBOL",
                  columns="ENTREZID")
@@ -120,7 +112,6 @@ the VCF file.
 Load the annotation package.
 
 ```{r}
-library(TxDb.Hsapiens.UCSC.hg19.knownGene)
 txdb <- TxDb.Hsapiens.UCSC.hg19.knownGene
 txdb
 ```
@@ -224,7 +215,6 @@ package is used as the source of the reference alleles. Variant
 alleles are provided by the user.
 
 ```{r}
-library(BSgenome.Hsapiens.UCSC.hg19)
 seqlevelsStyle(vcf) <- "UCSC"
 seqlevelsStyle(txdb) <- "UCSC"
 aa <- predictCoding(vcf, txdb, Hsapiens)
